🚧 (r/components): 调整 layout 样式

--- a/src/styles/prismjs-other.css
+++ b/src/styles/prismjs-other.css
@@ -61,6 +61,7 @@ pre[class*="language-"].line-numbers>code {
     background-color: #646464;
     color: #bbbbbb;
     padding: 2px 6px 2px 8px;
+    pointer-events: none;
 }
 
 /** gatsby-highlight **/
