--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,3 +6,22 @@ svg {
     width: 1em;
     height: 1em;
 }
+
+.no-scrollbar {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* todo */
+[data-theme="default"] {
+    --primary-color: #51b26d;
+    --background-color: #e0e0e0;
+    --text-color: #555;
+    --accent-background-color: #eeeeee;
+    --accent-text-color: #212121;
+    --divider-color: #bdbdbd80;
+}
