--- a/src/styles/heti.css
+++ b/src/styles/heti.css
@@ -311,6 +311,7 @@
     font-weight: 600;
     border-left: 4px solid rgb(74 222 128);
     padding-left: 32px;
+    color: rgb(75 85 99);
 }
 
 .heti h1 {
