--- a/src/styles/prismjs-other.css
+++ b/src/styles/prismjs-other.css
@@ -1,3 +1,7 @@
+div[class*="gatsby-highlight"] {
+    position: relative;
+}
+
 /** line number **/
 pre[class*="language-"].line-numbers {
     position: relative;
@@ -39,30 +43,35 @@ pre[class*="language-"].line-numbers>code {
     text-align: right;
 }
 
-/** code block title **/
-.code-block-title {
-    color: #d1d1d1;
-    font-size: 16px;
-    padding: 4px 0px 4px 8px;
+/** code block header **/
+.code-block-header {
+    display: block;
+    height: 36px;
     background-color: #646464;
     border-radius: 4px 4px 0px 0px;
 }
 
-.code-block-title+pre {
+.code-block-header + pre {
     border-radius: 0px 0px 4px 4px !important;
 }
 
-/** show language name **/
+.code-block-title {
+    display: inline;
+    float: left;
+    color: #d1d1d1;
+    padding: 6px 6px 2px 8px;
+    font-size: 16px;
+}
+
 .show-language-name {
-    position: absolute;
-    z-index: 1;
-    top: 4px;
-    right: 8px;
-    background-color: #646464;
-    color: #bbbbbb;
-    padding: 2px 6px 2px 8px;
+    display: inline;
+    float: right;
+    color: #aaaaaa;
+    background-color: #2b2b2b;
+    padding: 8px 8px 4px 8px;
     pointer-events: none;
 }
+
 
 /** gatsby-highlight **/
 .gatsby-highlight {
